--- a/p2pp/package.json
+++ b/p2pp/package.json
@@ -3,16 +3,23 @@
   "module": "index.tsx",
   "type": "module",
   "devDependencies": {
+    "@types/uuid": "^9.0.4",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.7",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "peerjs": "^1.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
+    "unique-names-generator": "^4.7.1",
+    "uuid": "^9.0.1"
   }
 }
