--- a/p2pp/package.json
+++ b/p2pp/package.json
@@ -15,6 +15,7 @@
     "@mui/joy": "^5.0.0-beta.7",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "lucide-react": "^0.284.0",
     "peerjs": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
